--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
             <div class="project">
                 <h3>Calculator</h3>
                 <img src="calculator.jpg" alt="Screenshot of Calculator Project" class="project-image">
-                <p>Calculator</p>
-                <a href="\Calculator\index.html" class="view-button">View</a>
+                <p>Calculator with Light/Dark Mode</p>
+                <a href="Calculator/index.html" class="view-button">View</a>
             </div>
             <div class="project">
                 <h3>Random Quote Generator</h3>
                 <img src="quotegenerator.jpg" alt="Screenshot of Random Quote Generator Project" class="project-image">
                 <p>Random Quote Generator</p>
-                <a href="\Quote Generator\index.html" class="view-button">View</a>
+                <a href="Quote Generator/index.html" class="view-button">View</a>
             </div>
         </div>
     </section>
