--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Calculator GUI</title>
-<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculator GUI</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
 <div class="calculator">
-  <div class="display">
-    <input type="text" id="display" disabled>
-  </div>
-  <div class="buttons">
-    <button onclick="clearDisplay()">AC</button>
-    <button onclick="deleteLast()">DEL</button>
-    <button class="operator" onclick="appendToDisplay('%')">%</button>  
-    <button class="operator" onclick="appendToDisplay('/')">/</button>
-    <button onclick="appendToDisplay('7')">7</button>
-    <button onclick="appendToDisplay('8')">8</button>
-    <button onclick="appendToDisplay('9')">9</button>
-    <button class="operator" onclick="appendToDisplay('*')">*</button>
-    <button onclick="appendToDisplay('4')">4</button>
-    <button onclick="appendToDisplay('5')">5</button>
-    <button onclick="appendToDisplay('6')">6</button>
-    <button class="operator" onclick="appendToDisplay('-')">-</button>
-    <button onclick="appendToDisplay('1')">1</button>
-    <button onclick="appendToDisplay('2')">2</button>
-    <button onclick="appendToDisplay('3')">3</button>
-    <button class="operator" onclick="appendToDisplay('+')">+</button>
-    <button class="zero-button" onclick="appendToDisplay('0')">0</button>
-    <button onclick="appendToDisplay('00')">00</button>
-    <button onclick="appendToDisplay('.')">.</button>
-    <button class="equal-button" onclick="calculate()">=</button>
-  </div>
+    <div class="theme-toggle">
+        <button id="theme-toggle" onclick="toggleTheme()">
+            <i class="fa fa-sun" id="icon" aria-hidden="true"></i>
+        </button>
+    </div>
+    <div class="display">
+        <input type="text" id="display" disabled>
+    </div>
+    <div class="buttons">
+        <button onclick="clearDisplay()">AC</button>
+        <button onclick="deleteLast()">DEL</button>
+        <button class="operator" onclick="appendToDisplay('%')">%</button>  
+        <button class="operator" onclick="appendToDisplay('/')">/</button>
+        <button onclick="appendToDisplay('7')">7</button>
+        <button onclick="appendToDisplay('8')">8</button>
+        <button onclick="appendToDisplay('9')">9</button>
+        <button class="operator" onclick="appendToDisplay('*')">*</button>
+        <button onclick="appendToDisplay('4')">4</button>
+        <button onclick="appendToDisplay('5')">5</button>
+        <button onclick="appendToDisplay('6')">6</button>
+        <button class="operator" onclick="appendToDisplay('-')">-</button>
+        <button onclick="appendToDisplay('1')">1</button>
+        <button onclick="appendToDisplay('2')">2</button>
+        <button onclick="appendToDisplay('3')">3</button>
+        <button class="operator" onclick="appendToDisplay('+')">+</button>
+        <button class="zero-button" onclick="appendToDisplay('0')">0</button>
+        <button onclick="appendToDisplay('00')">00</button>
+        <button onclick="appendToDisplay('.')">.</button>
+        <button class="equal-button" onclick="calculate()">=</button>
+    </div>
 </div>
 
 <script src="script.js"></script>
