Made navbar responsive

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,13 +12,17 @@
 
 <body>
     <nav>
-        <ul>
+        <div class="hamburger">
+            <i class="fas fa-bars"></i> <!-- Font Awesome hamburger icon -->
+        </div>
+        <ul class="nav-list">
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
+    
 
     <header>
         <h1>Julio Gabriel Trinidad</h1>
@@ -88,6 +93,6 @@
             </li>
         </ul>
     </section>
-    
+    <script src="script.js"></script>
 </body>
 </html>
