--- a/index.html
+++ b/index.html
@@ -55,17 +55,23 @@
 
     <section id="skills">
         <h2>Skills</h2>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>PHP</li>
-            <li>MySQL</li>
-            <li>Python</li>
-            <li>Arduino</li>
-            <li>C#</li>
-        </ul>
-    </section>
+        <div class="skills-container">
+            <div class="front-end">
+                <h3>Front end</h3>
+                <div class="skill-card">HTML</div>
+                <div class="skill-card">CSS</div>
+                <div class="skill-card">JavaScript</div>
+            </div>
+            <div class="back-end">
+                <h3>Back end</h3>
+                <div class="skill-card">PHP</div>
+                <div class="skill-card">MySQL</div>
+                <div class="skill-card">Arduino</div>
+                <div class="skill-card">C#</div>
+            </div>
+        </div>
+    </section> 
+    
 
     <section id="contact">
         <h2>Contact Me</h2>
