Add fixed position navbar for mobile screens

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </ul>
     </nav>
     
-    <header>
+    <header class="hero">
         <div>
             <img src="assets/profilepic.jpg" alt="Profile Picture of Julio Gabriel Trinidad" class="profile-pic">
         </div> 
@@ -133,4 +133,4 @@
     
     <script src="script.js"></script>
 </body>
-</html>
+</html> 
